--- a/views/admin/partials/header.ejs
+++ b/views/admin/partials/header.ejs
@@ -101,7 +101,7 @@
                 <div id="collapsePeople" class="collapse" aria-labelledby="headingPeople" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Azioni</h6>
-                        <a class="collapse-item" href="/admin/people">Storico?</a>
+                        <a class="collapse-item" href="/admin/people">Storico</a>
                         <a class="collapse-item text-info" href="/admin/people/create">Crea</a>
                     </div>
                 </div>
