--- a/views/admin/phrases/create.ejs
+++ b/views/admin/phrases/create.ejs
@@ -66,9 +66,7 @@
                         </div>
 
 
-                        <div class="form-group mt-5 mb-0">
-                            <span class="text-danger">*</span> È obbligatorio!
-                        </div>
+                        <%- include('../partials/form/required') %>
 
                 </div>
                 <div class="card-footer">
