--- a/views/admin/phrases/update.ejs
+++ b/views/admin/phrases/update.ejs
@@ -108,9 +108,7 @@
 
 
 
-                                <div class="form-group mt-5 mb-0">
-                                    <span class="text-danger">*</span> È obbligatorio!
-                                </div>
+                                <%- include('../partials/form/required') %>
 
 
 
@@ -132,10 +130,10 @@
 
         <script>
             /* let statusSwitch = document.getElementById('statusSwitch')
-                                                                                                                                                if (statusSwitch.dataset.status == 1) {
-                                                                                                                                                    const attr = document.createAttribute("checked")
-                                                                                                                                                    statusSwitch.setAttributeNode(attr)
-                                                                                                                                                } */
+                                                                                                                                                            if (statusSwitch.dataset.status == 1) {
+                                                                                                                                                                const attr = document.createAttribute("checked")
+                                                                                                                                                                statusSwitch.setAttributeNode(attr)
+                                                                                                                                                            } */
         </script>
 
         <script src="/js/admin/crudPhrases.js"></script>
