--- a/views/admin/people/all.ejs
+++ b/views/admin/people/all.ejs
@@ -93,7 +93,7 @@
                                                 <img src="/assets/flags/128x128/<%= person.countryCode %>.png">
                                                 <%= person.countryCode %>
                                             </td>
-                                            <td class="d-flex justify-content-between align-items-center" style="height: 180px;">
+                                            <td class="d-flex justify-content-around align-items-center" style="height: 180px;">
                                                 <a href="/admin/people/<%= person.id %>"><i class="fas fa-edit text-info"></i></a>
                                                 <form method="post" action="/admin/people/delete/<%= person.id %>?_method=DELETE">
                                                     <input type="hidden" name="_method" value="DELETE">
