--- a/views/admin/phrases/all.ejs
+++ b/views/admin/phrases/all.ejs
@@ -70,7 +70,7 @@
                                             <td style="width: 25%;">
                                                 <% if (phrase.img) { %>
                                                     <div class="img-hover-zoom">
-                                                        <img style="height: 150px;" title="<%= phrase.quotedById %>" src="<%= phrase.img %>">
+                                                        <img style="height: 150px;" title="<%= phrase.name %> <%= phrase.surname %>" src="<%= phrase.img %>">
                                                     </div>
                                                     <% } else { %>
                                                         <i class="fas fa-times text-dark"></i>
