--- a/views/admin/partials/header.ejs
+++ b/views/admin/partials/header.ejs
@@ -19,6 +19,13 @@
     <!-- <link rel="stylesheet" href="/css/styleAdmin.css"> -->
 
 
+    <!-- Latest compiled and minified CSS -->
+    <link defer rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/css/bootstrap-select.min.css">
+
+    <!-- Latest compiled and minified JavaScript -->
+    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/js/bootstrap-select.min.js"></script>
+
+
 
     <!-- ONLY FOR TABLES || Still not working -->
     <!-- <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.24/css/jquery.dataTables.css">
