--- a/views/admin/people/create.ejs
+++ b/views/admin/people/create.ejs
@@ -40,21 +40,23 @@
 
                         <div class="row">
 
-                            <div class="col-md-6">
+                            <div class="col-md-7">
                                 <div class="input-group mb-3">
 
                                     <div class="input-group-prepend">
-                                        <label class="input-group-text" for="country">Paese</label>
+                                        <label class="input-group-text" for="countryCode">Paese</label>
                                     </div>
-                                    <select class="custom-select" name="country" id="country">
+                                    <!-- data-live-search-normalize : accent-insensitive searching -->
+                                    <select class="selectpicker show-tick" name="countryCode" id="countryCode" data-live-search="true" data-live-search-normalize="true" data-size="6">  
                                         <option value="" selected>Nessuno ...</option>
-                                        <option value="it" selected>Italia</option>
-                                        <option value="fr" selected>Francia</option>
+                                        <% countries.forEach(country => { %>
+                                            <option value="<%= country.alpha_2 %>" style><%= country.name %></option>
+                                        <% }) %>
                                     </select>
                                 </div>
                             </div>
 
-                            <div class="col-md-6">
+                            <div class="col-md-5">
                                 <div class="form-group mb-3">
 
                                     <div class="col-12 d-flex justify-content-between align-items-center mt-1">
@@ -66,26 +68,35 @@
                             </div>
                         </div>
 
+                        <div class="form-group mb-3">
+                            <label for="job">Lavoro</label>
+                            <input type="text" name="job" id="job" class="form-control">
+                        </div>
 
-                        <div class=" input-group mb-3 ">
-                            <div class="input-group-prepend ">
-                                <span class="input-group-text " id="inputFile "><i class="fas fa-upload "></i></span>
+
+                        <div class="input-group mb-3">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text" id="inputFile"><i class="fas fa-upload"></i></span>
                             </div>
-                            <div class="custom-file ">
-                                <input type="file " class="custom-file-input " name="image " id="image " onchange="checkFile(this) " aria-describedby="inputFile ">
-                                <label class="custom-file-label " for="image ">Selezione l'immagine</label>
+                            <div class="custom-file">
+                                <input type="file" class="custom-file-input" name="image" id="image" onchange="checkFile(this)" aria-describedby="inputFile">
+                                <label class="custom-file-label" for="image">Selezione l'immagine</label>
                             </div>
                         </div>
 
-                        <div class="col-12 d-flex justify-content-center align-items-end ">
-                            <div class="col-xl-10 col-lg-12 mb-3 ">
-                                <img id="imagePreview " src="# " style="width: 100%; " hidden>
+                        <div class="col-12 d-flex justify-content-center align-items-end">
+                            <div class="col-xl-10 col-lg-12 mb-3">
+                                <img id="imagePreview" src="#" style="width: 100%;" hidden>
                             </div>
 
-
-                            <!-- la deleteImage va tolta? perché di per sé in create non l'ho ancora caricata -->
-                            <i class="fas fa-trash text-primary fa-2x mb-3 " id="btnDeleteImage " onclick="deleteImage() " hidden></i>
+                            <i class="fas fa-trash text-primary fa-2x mb-3" id="btnDeleteImage" onclick="deleteImage()" hidden></i>
                         </div>
+
+
+
+
+
+
 
 
                         <%- include('../partials/form/required') %>
@@ -106,6 +117,8 @@
         </div>
 
     </div>
+
+    <script src="/js/admin/crudPeople.js"></script>
 
 
     <%- include('../partials/footer') %>
