--- a/views/admin/phrases/update.ejs
+++ b/views/admin/phrases/update.ejs
@@ -63,7 +63,7 @@
                             </div>
                             <div class="custom-file">
                                 <input type="file" class="custom-file-input" name="image" id="image" onchange="checkFile(this)" aria-describedby="inputFile">
-                                <label class="custom-file-label" for="image">Selezione l'immagine</label>
+                                <label class="custom-file-label" for="image">Selezionare l'immagine</label>
                             </div>
                         </div>
 
@@ -130,10 +130,10 @@
 
         <script>
             /* let statusSwitch = document.getElementById('statusSwitch')
-                                                                                                                                                            if (statusSwitch.dataset.status == 1) {
-                                                                                                                                                                const attr = document.createAttribute("checked")
-                                                                                                                                                                statusSwitch.setAttributeNode(attr)
-                                                                                                                                                            } */
+                                                                                                                                                                        if (statusSwitch.dataset.status == 1) {
+                                                                                                                                                                            const attr = document.createAttribute("checked")
+                                                                                                                                                                            statusSwitch.setAttributeNode(attr)
+                                                                                                                                                                        } */
         </script>
 
         <script src="/js/admin/crudPhrases.js"></script>
