--- a/views/admin/people/update.ejs
+++ b/views/admin/people/update.ejs
@@ -46,10 +46,16 @@
                                     <div class="input-group-prepend">
                                         <label class="input-group-text" for="country">Paese</label>
                                     </div>
-                                    <select class="custom-select" name="country" id="country">
+                                    <!-- data-live-search-normalize : accent-insensitive searching -->
+                                    <select class="selectpicker show-tick" name="countryCode" id="countryCode" data-live-search="true" data-live-search-normalize="true" data-size="6">  
                                         <option value="" selected>Nessuno ...</option>
-                                        <option value="it" selected>Italia</option>
-                                        <option value="fr" selected>Francia</option>
+                                        <% countries.forEach(country => { %>
+                                            <% if (person.countryCode == country.alpha_2) { %>
+                                                <option value="<%= country.alpha_2 %>" selected><%= country.name %></option>
+                                                <% } else { %>
+                                                    <option value="<%= country.alpha_2 %>"><%= country.name %></option>
+                                                <% } %>
+                                        <% }) %>
                                     </select>
                                 </div>
                             </div>
@@ -67,28 +73,47 @@
                         </div>
 
 
-                        <div class=" input-group mb-3 ">
-                            <div class="input-group-prepend ">
-                                <span class="input-group-text " id="inputFile "><i class="fas fa-upload "></i></span>
+                        <div class="input-group mb-3">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text" id="inputFile"><i class="fas fa-upload"></i></span>
                             </div>
-                            <div class="custom-file ">
-                                <input type="file " class="custom-file-input " name="image " id="image " onchange="checkFile(this) " aria-describedby="inputFile ">
-                                <label class="custom-file-label " for="image ">Selezione l'immagine</label>
+                            <div class="custom-file">
+                                <input type="file" class="custom-file-input" name="image" id="image" onchange="checkFile(this)" aria-describedby="inputFile">
+                                <label class="custom-file-label" for="image">Selezionare l'immagine</label>
                             </div>
                         </div>
 
-                        <div class="col-12 d-flex justify-content-center align-items-end ">
-                            <div class="col-xl-10 col-lg-12 mb-3 ">
-                                <img id="imagePreview " src="# " style="width: 100%; " hidden>
+                        <div class="col-12 d-flex justify-content-center align-items-end">
+                            <div class="col-xl-10 col-lg-12 mb-3">
+                                <img id="imagePreview" src="#" style="width: 100%;" hidden>
                             </div>
 
-
-                            <!-- la deleteImage va tolta? perché di per sé in create non l'ho ancora caricata -->
-                            <i class="fas fa-trash text-primary fa-2x mb-3 " id="btnDeleteImage " onclick="deleteImage() " hidden></i>
+                            <i class="fas fa-trash text-primary fa-2x mb-3" id="btnDeleteImage" onclick="deleteImage()" hidden></i>
                         </div>
 
 
-                        <%- include('../partials/form/required') %>
+
+
+                        <% if (person.img && person.img !== '') { %>
+
+                            <div class="col-12 d-flex justify-content-center align-items-end">
+                                <div class="col-xl-10 col-lg-12 mb-3">
+                                    <img id="oldImg" src="<%= person.img %>" style="width: 100%;" id="oldImg">
+                                </div>
+
+                                <button type="button" style="background-color: transparent; border: none;" id="trashOldImg" onclick="deleteSavedImage(['oldImg', 'trashOldImg', 'iconOldImg'])">
+                                        <i class="fas fa-trash text-primary fa-2x mb-3" id="iconOldImg"></i>
+                                    </button>
+
+                                <!-- <i class="fas fa-trash text-primary fa-2x mb-3 " id="deleteSavedImage " hidden></i> -->
+
+                            </div>
+
+
+                            <% } %>
+
+
+                                <%- include('../partials/form/required') %>
 
                 </div>
                 <div class="card-footer ">
@@ -113,6 +138,8 @@
         </div>
 
     </div>
+
+    <script src="/js/admin/crudPeople.js"></script>
 
 
     <%- include('../partials/footer') %>
