--- a/views/admin/people/update.ejs
+++ b/views/admin/people/update.ejs
@@ -72,6 +72,11 @@
                             </div>
                         </div>
 
+                        <div class="form-group mb-3">
+                            <label for="job">Lavoro</label>
+                            <input type="text" name="job" id="job" class="form-control" value="<%= person.job %>">
+                        </div>
+
 
                         <div class="input-group mb-3">
                             <div class="input-group-prepend">
@@ -94,6 +99,7 @@
 
 
 
+
                         <% if (person.img && person.img !== '') { %>
 
                             <div class="col-12 d-flex justify-content-center align-items-end">
@@ -102,8 +108,8 @@
                                 </div>
 
                                 <button type="button" style="background-color: transparent; border: none;" id="trashOldImg" onclick="deleteSavedImage(['oldImg', 'trashOldImg', 'iconOldImg'])">
-                                        <i class="fas fa-trash text-primary fa-2x mb-3" id="iconOldImg"></i>
-                                    </button>
+                                    <i class="fas fa-trash text-primary fa-2x mb-3" id="iconOldImg"></i>
+                                </button>
 
                                 <!-- <i class="fas fa-trash text-primary fa-2x mb-3 " id="deleteSavedImage " hidden></i> -->
 
@@ -112,6 +118,8 @@
 
                             <% } %>
 
+                                <input type="text" name="deleteImage" id="deleteImage" value="0" hidden>
+                                <input type="text" name="oldImgUrl" value="<%= person.img %>" hidden>
 
                                 <%- include('../partials/form/required') %>
 
