--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,17 +1,33 @@
 <h1>Register</h1>
 <form action="/register" method="POST">
     <div>
-        <label for="name">Name</label>
-        <input type="text" id="name" name="name" required>
-    </div>
-    <div>
         <label for="email">Email</label>
         <input type="email" id="email" name="email" required>
+    </div>
+    <div>
+        <label for="username">Username</label>
+        <input type="text" id="username" name="username" required>
     </div>
     <div>
         <label for="password">Password</label>
         <input type="password" id="password" name="password" required>
     </div>
+    <div>
+        <label for="name">Nome</label>
+        <input type="text" id="name" name="name">
+    </div>
+    <div>
+        <label for="surname">Cognome</label>
+        <input type="text" id="surname" name="surname">
+    </div>
+    <!-- <div>
+        <label for="name">Name</label>
+        <input type="text" id="name" name="name">
+    </div>
+    <div>
+        <label for="name">Name</label>
+        <input type="text" id="name" name="name">
+    </div> -->
     <button type="submit">Register</button>
 </form>
 <a href="/login">Login</a>
