it looks like passport works

--- a/views/public/index.ejs
+++ b/views/public/index.ejs
@@ -17,8 +17,10 @@
 
 <body>
     HOME | Hi
-    <%= name %>
 
+    <%= user.username %>
+        <br>
+        <br>
         <form action="/logout?_method=DELETE" method="POST">
             <button type="submit">Logout</button>
         </form>
