landing page for admin implemented

--- a/views/admin/people/all.ejs
+++ b/views/admin/people/all.ejs
@@ -95,7 +95,9 @@
                                                                 <% } %>
                                             </td>
                                             <td>
-                                                <div class="square" data-color="<%= person.quotationMarksColor %>"></div>
+                                                <div class="d-flex justify-content-center align-items-center">
+                                                    <div class="square" data-color="<%= person.quotationMarksColor %>"></div>
+                                                </div>
                                             </td>
                                             <td>
                                                 <% if (person.countryCode) { %>
