--- a/views/admin/partials/header.ejs
+++ b/views/admin/partials/header.ejs
@@ -196,8 +196,15 @@
                                 </a>
                                 <div class="dropdown-divider "></div>
                                 <a class="dropdown-item " href="# " data-toggle="modal " data-target="#logoutModal ">
-                                    <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400 "></i> Logout
+                                    <form action="/logout?_method=DELETE" method="POST">
+                                        <button type="submit" class="btn btn-light">
+                                            <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400 "></i> Logout
+                                        </button>
+                                    </form>
                                 </a>
+
+
+
                             </div>
                         </li>
 
