--- a/views/admin/people/update.ejs
+++ b/views/admin/people/update.ejs
@@ -33,7 +33,7 @@
                             <div class="col-md-4">
                                 <div class="form-group">
                                     <label for="dateOfBirth">Data di nascita</label>
-                                    <input type="date" name="dateOfBirth" id="dateOfBirth" class="form-control" value="<%= person.dateOfBirth %>">
+                                    <input type="date" name="dateOfBirth" id="dateOfBirth" class="form-control" value="<%= person.yearOfBirth %>-<%= person.monthOfBirth %>-<%= person.dayOfBirth %>">
                                 </div>
                             </div>
                         </div>
