--- a/views/admin/phrases/all.ejs
+++ b/views/admin/phrases/all.ejs
@@ -73,8 +73,8 @@
                                                         <img style="height: 150px;" title="<%= phrase.name %> <%= phrase.surname %>" src="<%= phrase.img %>">
                                                     </div>
                                                     <% } else { %>
-                                                        <i class="fas fa-times text-dark"></i>
-                                                        <% } %>
+                                                        <%- include('./../partials/table/notAvailable') %>
+                                                            <% } %>
                                             </td>
                                             <td style="width: 10%;">
 
@@ -85,8 +85,8 @@
                                                     </a>
 
                                                     <% } else { %>
-                                                        <i class="fas fa-times text-dark"></i>
-                                                        <% } %>
+                                                        <%- include('./../partials/table/notAvailable') %>
+                                                            <% } %>
 
                                             </td>
                                             <td>
@@ -94,7 +94,9 @@
                                                     <%= phrase.dayOfPublication %> /
                                                         <%= phrase.monthOfPublication %> /
                                                             <%= phrase.yearOfPublication %>
-                                                                <% } %>
+                                                                <% } else { %>
+                                                                    <%- include('./../partials/table/notAvailable') %>
+                                                                        <% } %>
                                             </td>
                                             <td style="width: 5%;">
                                                 105 V
