--- a/views/admin/landing.ejs
+++ b/views/admin/landing.ejs
@@ -1,22 +1,124 @@
-<%- include('./../public/partials/header') %>
+<!DOCTYPE html>
+<html lang="it">
+<!-- da sostituire con la lingua { account.lang } -->
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Test</title>
+
+    <!-- <link rel="stylesheet" href="/css/main.css"> -->
+    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"> -->
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js" integrity="sha512-RXf+QSDCUQs5uwRKaDoXt55jygZZm2V++WUZduaU/Ui/9EGp3f/2KZVahFZBKGH0s774sd3HmrhUy+SgOFQLVQ==" crossorigin="anonymous"></script>
+
+    <link href="/startbootstrap-sb-admin-2-gh-pages/css/sb-admin-2.min.css" rel="stylesheet">
+    <link href="/css/mycss.css" rel="stylesheet">
+    <!-- <link rel="stylesheet" href="/css/styleAdmin.css"> -->
 
 
-    <div class="container-fluid">
+    <!-- Latest compiled and minified CSS -->
+    <link defer rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/css/bootstrap-select.min.css">
 
-        <!-- page heading -->
-        <div class="d-flex align-items-center justify-content-between mb-4 ">
-            <h1 class="h3 mb-0 mr-4 text-gray-800 ">Landing page</h1>
-        </div>
-
-        <div class="col-12 d-flex justify-content-center align-items-center">
-
-            <p>Welcome back
-                <%= user.name %>
-            </p>
-            <a href="/admin/dashboard">ADMIN</a>
-            <a href="/">BASIC</a>
-        </div>
-    </div>
+    <!-- Latest compiled and minified JavaScript -->
+    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/js/bootstrap-select.min.js"></script>
 
 
-    <%- include('./../public/partials/footer') %>
+
+    <!-- ONLY FOR TABLES || Still not working -->
+    <!-- <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.24/css/jquery.dataTables.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.24/js/jquery.dataTables.js"></script>
+    <script>
+        $(document).ready(function() {
+            $('#dataTable').DataTable();
+        })
+    </script> -->
+
+
+
+    <!-- <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script> -->
+
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
+    <!-- <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script> -->
+</head>
+
+<body>
+
+    <!-- page wrapper -->
+    <div id="wrapper" class="min-vh-100">
+
+
+        <!-- Content Wrapper -->
+        <div id="content-wrapper" class="d-flex flex-column">
+
+            <!-- Main Content -->
+            <div id="content">
+
+                <!-- Topbar -->
+                <nav class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow">
+
+
+
+                    <i class="far fa-heart text-primary"></i>&nbsp;<span class="d-none d-sm-block">| Landing page</span>
+
+
+                    <!-- Topbar Navbar -->
+                    <ul class="navbar-nav ml-auto ">
+
+                        <!-- Nav Item - User Information -->
+                        <li class="nav-item dropdown no-arrow ">
+                            <a class="nav-link dropdown-toggle " href="# " id="userDropdown " role="button " data-toggle="dropdown " aria-haspopup="true " aria-expanded="false ">
+                                <span class="mr-2 d-block text-gray-600 large "><%= user.name %> <%= user.surname %></span>
+                                <div class="topbar-divider d-block d-sm-block "></div>
+                                <img style="width:60px; height:60px; object-fit: cover; " class="rounded-circle " src="https://www.monaco-tribune.com/wp-content/uploads/2020/10/charles-leclerc.jpeg ">
+                            </a>
+                            <!-- Dropdown - User Information -->
+                            <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in " aria-labelledby="userDropdown ">
+                                <a class="dropdown-item " href="# ">
+                                    <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400 "></i> Profile
+                                </a>
+                                <div class="dropdown-divider "></div>
+                                <a class="dropdown-item " href="# " data-toggle="modal " data-target="#logoutModal ">
+                                    <form action="/logout?_method=DELETE " method="POST ">
+                                        <button type="submit " class="btn btn-light ">
+                                            <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400 "></i> Logout
+                                        </button>
+                                    </form>
+                                </a>
+
+
+
+                            </div>
+                        </li>
+
+                    </ul>
+
+                </nav>
+                <!-- End of Topbar -->
+
+
+                <div class="jumbotron jumbotron-fluid mb-0">
+                    <div class="container ">
+                        <div class="row justify-content-center text-center ">
+                            <div class="col-md-10 col-lg-6 ">
+                                <h1>Welcome back, <span class="text-primary" style="font-weight: 600;"><%= user.name %></span></h1>
+                                <hr>
+                                <p class="lead ">Sei un admin, scegli dove vuoni andare </p>
+                                <a class="btn btn-primary" href="/admin/dashboard">Admin</a>
+                                <a class="btn btn-primary" href="/">Basic</a>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                </section>
+
+
+
+                <%- include('./../public/partials/footer') %>
