--- a/views/public/partials/header.ejs
+++ b/views/public/partials/header.ejs
@@ -48,7 +48,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script> -->
 </head>
 
-<body>
+<body class="min-vh-100 bg-gradient-primary">
 
     <!-- page wrapper -->
     <div id="wrapper">
@@ -61,39 +61,45 @@
             <div id="content">
 
                 <!-- Topbar -->
-                <nav class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow">
+                <nav class="navbar navbar-expand topbar mb-4 static-top shadow">
 
+                    :heart | I'm with you
 
 
                     <!-- Topbar Navbar -->
                     <ul class="navbar-nav ml-auto">
 
-                        <!-- Nav Item - User Information -->
-                        <li class="nav-item dropdown no-arrow">
-                            <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <span class="mr-2 d-block text-gray-600 large"><%= user.name %> <%= user.surname %></span>
-                                <div class="topbar-divider d-block d-sm-block"></div>
-                                <img style="width:60px; height:60px; object-fit: cover;" class="rounded-circle" src="https://www.monaco-tribune.com/wp-content/uploads/2020/10/charles-leclerc.jpeg ">
-                            </a>
-                            <!-- Dropdown - User Information -->
-                            <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in " aria-labelledby="userDropdown ">
-                                <a class="dropdown-item " href="# ">
-                                    <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400 "></i> Profile
+                        <% if (user) { %>
+                            <!-- Nav Item - User Information -->
+                            <li class="nav-item dropdown no-arrow">
+                                <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    <span class="mr-2 d-block text-gray-600 large"><%= user.name %> <%= user.surname %></span>
+                                    <div class="topbar-divider d-block d-sm-block"></div>
+                                    <img style="width:60px; height:60px; object-fit: cover;" class="rounded-circle" src="https://www.monaco-tribune.com/wp-content/uploads/2020/10/charles-leclerc.jpeg ">
                                 </a>
-                                <div class="dropdown-divider "></div>
-                                <a class="dropdown-item " href="# " data-toggle="modal " data-target="#logoutModal ">
-                                    <form action="/logout?_method=DELETE" method="POST">
-                                        <button type="submit" class="btn btn-light">
+                                <!-- Dropdown - User Information -->
+                                <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in " aria-labelledby="userDropdown ">
+                                    <a class="dropdown-item " href="#">
+                                        <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400 "></i> Profile
+                                    </a>
+                                    <div class="dropdown-divider "></div>
+                                    <a class="dropdown-item " href="# " data-toggle="modal " data-target="#logoutModal ">
+                                        <form action="/logout?_method=DELETE" method="POST">
+                                            <button type="submit" class="btn btn-light">
                                             <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400 "></i> Logout
                                         </button>
-                                    </form>
-                                </a>
+                                        </form>
+                                    </a>
 
 
 
-                            </div>
-                        </li>
+                                </div>
+                            </li>
 
+                            <% } else { %>
+                                <a href="/register">Registrati</a>
+                                <a href="/login">Accedi</a>
+                                <% } %>
                     </ul>
 
                 </nav>
