--- a/views/admin/landing.ejs
+++ b/views/admin/landing.ejs
@@ -110,8 +110,8 @@
                                 <h1>Welcome back, <span class="text-primary" style="font-weight: 600;"><%= user.name %></span></h1>
                                 <hr>
                                 <p class="lead ">Sei un admin, scegli dove vuoni andare </p>
-                                <a class="btn btn-primary" href="/admin/dashboard">Admin</a>
-                                <a class="btn btn-primary" href="/">Basic</a>
+                                <a class="btn btn-primary" style="width: 100px;" href="/admin/dashboard">Admin</a>
+                                <a class="btn btn-primary" style="width: 100px;" href="/">Basic</a>
 
                             </div>
                         </div>
