--- a/views/admin/partials/header.ejs
+++ b/views/admin/partials/header.ejs
@@ -146,8 +146,7 @@
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Tipologie</h6>
                         <a class="collapse-item" href="/admin/admins">Admin</a>
-                        <a class="collapse-item" href="/admin/users">Basic</a>
-                        <!-- <a class="collapse-item text-info" href="/admin/posts/create">Crea</a> -->
+                        <a class="collapse-item" href="/admin/basics">Basic</a>
                     </div>
                 </div>
             </li>
