--- a/views/admin/users/all.ejs
+++ b/views/admin/users/all.ejs
@@ -6,61 +6,42 @@
         <div class="row">
             <div class="col-12 mb-4">
                 <div class="card border-right-primary shadow h-100 py-2">
-                    <div class="
-            card-header
-            py-3
-            d-flex
-            flex-row
-            align-items-center
-            justify-content-between
-          ">
+                    <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
+
                         <h6 class="m-0 font-weight-bold">Tabella UTENTI |
                             <%= role %>
                         </h6>
 
-                        <h7>Crea utente
-                            <%= role %>
-                        </h7>
+                        <div class="d-flex align-items-center justify-content-between">
+                            <a href="/admin/users/create" class="text-info mr-4"><i class="fas fa-plus-square"></i> | Crea nuovo</a>
 
-                        <div class="dropdown no-arrow">
-                            <!-- IE => Import/Export -->
-                            <a class="dropdown-toggle" href="#" role="button" id="dropdownIELink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
-                            </a>
+                            <div class="dropdown no-arrow">
+                                <!-- IE => Import/Export -->
+                                <a class="dropdown-toggle" href="#" role="button" id="dropdownIELink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
+                                </a>
 
-                            <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in" aria-labelledby="dropdownIE">
-                                <!-- IMPORT -->
-                                <div class="dropdown-header">(icon) Importa</div>
-                                <div class="no-gutters align-items-center">
-                                    <a class="dropdown-item" href="#">
+                                <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in" aria-labelledby="dropdownIE">
+                                    <!-- IMPORT -->
+                                    <div class="dropdown-header">(icon) Importa</div>
+                                    <div class="no-gutters align-items-center">
+                                        <a class="dropdown-item" href="#">
 
+                                            <div class="font-weight-bold text-dark d-flex align-items-center">
+                                                <i class="fas fa-file-csv fa-2x mr-3"></i>CSV
+                                            </div>
+                                        </a>
+                                    </div>
 
-                                        <!-- era TEXT-S ??-->
-                                        <div class="text-s
-                      font-weight-bold
-                      text-dark
-                      d-flex
-                      align-items-center
-                    ">
-                                            <i class="fas fa-file-csv fa-2x mr-3"></i>CSV
-                                        </div>
-                                    </a>
-                                </div>
-
-                                <!-- EXPORT -->
-                                <div class="dropdown-header">(icon) Esporta</div>
-                                <div class="no-gutters align-items-center">
-                                    <a class="dropdown-item" href="#">
-                                        <div class="
-                      text-s
-                      font-weight-bold
-                      text-dark
-                      d-flex
-                      align-items-center
-                    ">
-                                            <i class="fas fa-file-csv fa-2x mr-3"></i>CSV
-                                        </div>
-                                    </a>
+                                    <!-- EXPORT -->
+                                    <div class="dropdown-header">(icon) Esporta</div>
+                                    <div class="no-gutters align-items-center">
+                                        <a class="dropdown-item" href="#">
+                                            <div class="font-weight-bold text-dark d-flex align-items-center">
+                                                <i class="fas fa-file-csv fa-2x mr-3"></i>CSV
+                                            </div>
+                                        </a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
